--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
+        "start": "ts-node example.ts",
         "build": "tsc"
     },
-    "devDependencies": {
-        "typescript": "^5.8.2",
-        "zod": "^3.0.0"
+    "dependencies": {
+        "dotenv": "^16.4.5",
+        "nanoid": "^5.1.5",
+        "open-agents-builder-client": "latest",
+        "zod": "^3.22.4"
     },
-    "author": "CatchTheTornado <https://www.catchthetornado.com/>",
-    "license": "MIT"
+    "devDependencies": {
+        "@types/node": "^20.11.24",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
+    }
 }
