--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
     "compilerOptions": {
       "target": "ES2020",
-      "module": "CommonJS",
-      "outDir": "dist",
-      "declaration": true,
-      "strict": true
+      "module": "commonjs",
+      "lib": ["ES2020", "DOM"],
+      "strict": true,
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true,
+      "outDir": "./dist",
+      "rootDir": ".",
+      "moduleResolution": "node"
     },
-    "include": ["src"]
+    "include": ["*.ts"],
+    "exclude": ["node_modules", "dist"]
   }
   
